# ATURP

./: .gitignore  CMakeLists.txt
.github/workflows/: windows-vs2022.yml
seminarska/: CMakeLists.txt  benchmark_results.csv  benchmark_results_smart.csv  benchmark_runner.py  generate_tests.py  plot_results.py  visualize_all_tests.py
seminarska/data/: past.01.txt  past.02.txt
seminarska/src/: main.cpp
vaja01/: CMakeLists.txt
vaja01/src/: main.cpp
vaja02/: CMakeLists.txt
vaja02/src/: main.cpp
vaja03/: CMakeLists.txt
vaja03/src/: main.cpp
vaja04/: CMakeLists.txt
vaja04/src/: main.cpp
